--- a/catchapp/package.json
+++ b/catchapp/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "babel-polyfill": "^6.26.0",
     "mint-ui": "^2.2.12",
     "vant": "^0.11.5",
     "vue": "^2.5.2",
@@ -28,6 +29,7 @@
     "css-loader": "^0.28.0",
     "eventsource-polyfill": "^0.9.6",
     "extract-text-webpack-plugin": "^3.0.0",
+    "fastclick": "^1.0.6",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
